JEDIT VERSION HISTORY

* Version 2.4pre4

+ Bug Fixes

- Fixed a bug in SyntaxDocument's line handling (since 2.4pre2)
- Automatic abbrev expansion didn't work (since 2.4pre1)
- BufferTabs had problems when buffers were closed sometimes (since 2.4pre1)

* Version 2.4pre3

jEdit 2.4pre3 is being released so soon after 2.4pre2 because an installer
error prevented 2.4pre2 from being installed properly.

+ New Features

- Previously, jEdit loaded all XML mode files on startup. This could take
  a long time. Now, we write only read a cache file, which can be loaded
  much faster. The cache file needs to be recreated when new edit modes
  are installed; invoke 'Utilities->Reload Edit Modes' to recreate it

+ Enhancements

- Ruby mode updates (Mike Dillon)
- Perl mode updates (Mike Dillon)
- Syntax highlighting streamlined

+ Bug Fixes

- jEdit didn't install due to an installer error (since 2.4pre2)
- jEdit didn't check if the buffer changed on disk when switching buffesr
  (since 2.4pre1)
- The read only flag wasn't set on files (since 2.2 !!!)
- Rule sets inherited the previous rule set's keyword map if no KEYWORDS
  element was specified (since 2.4pre2)
- Fixed escape handling in delegates (Mike Dillon) (since 2.4pre2)

+ API Changes

- The ASPMode plugin will no longer work, because hard-coded token markers
  are no longer supported. ASPMode should be rewritten in the XMode XML
  syntax.

* Version 2.4pre2

+ New Features

- The XMode plugin by Mike Dillon has been integrated into the core. This means
  that:
  - you can now define edit modes using an XML syntax
  - there are more modes available -- COBOL, ColdFusion, Ruby, Scheme, AWK, etc
  - many existing modes now work better; operators are highlighted, etc
  - jEdit starts up a little slower now, because it has to parse all XML mode
    files. In a future release, we will implement a cache mechanism that will
    speed up startup
  - the Perl mode is still implemented using the old syntax system, because the