@@ -7,7 +7,6 @@
 		<PROPERTY NAME="label" VALUE="ColdFusion 4.0" />
 		<PROPERTY NAME="commentStart" VALUE="&lt;!--" />
 		<PROPERTY NAME="commentEnd" VALUE="--&gt;" />
-		<PROPERTY NAME="boxComment" VALUE="--" />
 		<PROPERTY NAME="filenameGlob" VALUE="*.{cfm,dbm}" />
 		<PROPERTY NAME="tabSize" VALUE="2" />
 	</PROPS>
@@ -40,12 +39,19 @@
 			<END>&gt;</END>
 		</SPAN>
 
-		<!-- markup tags -->
-		<SPAN TYPE="KEYWORD1" DELEGATE="TAGS">
-			<BEGIN>&lt;/</BEGIN>
-			<END>&gt;</END>
+		<!-- JavaScript -->
+		<SPAN TYPE="LABEL" DELEGATE="javascript::MAIN">
+			<BEGIN>&lt;SCRIPT&gt;</BEGIN>
+			<END>&lt;/SCRIPT&gt;</END>
 		</SPAN>
 
+		<!-- stylesheet -->
+		<SPAN TYPE="LABEL" DELEGATE="css::MAIN">
+			<BEGIN>&lt;STYLE&gt;</BEGIN>
+			<END>&lt;/STYLE&gt;</END>
+		</SPAN>
+
+		<!-- markup tags -->
 		<SPAN TYPE="KEYWORD1" DELEGATE="TAGS">
 			<BEGIN>&lt;</BEGIN>
 			<END>&gt;</END>
@@ -67,6 +73,11 @@
 			<BEGIN>"</BEGIN>
 			<END>"</END>
 		</SPAN>
+		<SPAN TYPE="LITERAL1">
+			<BEGIN>'</BEGIN>
+			<END>'</END>
+		</SPAN>
+
 		<SEQ TYPE="OPERATOR">=</SEQ>
 
 		<!-- CFML markup start tags -->
@@ -91,6 +102,11 @@
 			<BEGIN>"</BEGIN>
 			<END>"</END>
 		</SPAN>
+		<SPAN TYPE="LITERAL1">
+			<BEGIN>'</BEGIN>
+			<END>'</END>
+		</SPAN>
+
 		<SEQ TYPE="OPERATOR">=</SEQ>
 
 		<SEQ TYPE="KEYWORD3">##</SEQ>
