@@ -7,10 +7,9 @@
 		<PROPERTY NAME="label" VALUE="JSP" />
 		<PROPERTY NAME="commentStart" VALUE="&lt;!--" />
 		<PROPERTY NAME="commentEnd" VALUE="--&gt;" />
-		<PROPERTY NAME="boxComment" VALUE="--" />
 		<PROPERTY NAME="filenameGlob" VALUE="*.jsp" />
 	</PROPS>
-	<RULES>
+	<RULES IGNORE_CASE="TRUE">
 		<!-- whitespace: (space and tab) -->
 		<WHITESPACE> </WHITESPACE>
 		<WHITESPACE>	</WHITESPACE>
@@ -27,14 +26,26 @@
 			<END>&gt;</END>
 		</SPAN>
 
-		<SPAN TYPE="LABEL" DELEGATE="PHP">
+		<SPAN TYPE="LABEL" DELEGATE="php::PHP">
 			<BEGIN>&lt;%=</BEGIN>
 			<END>%&gt;</END>
 		</SPAN>
 		
-		<SPAN TYPE="LABEL" DELEGATE="JSP">
+		<SPAN TYPE="LABEL" DELEGATE="java::MAIN">
 			<BEGIN>&lt;%</BEGIN>
 			<END>%&gt;</END>
+		</SPAN>
+
+		<!-- JavaScript -->
+		<SPAN TYPE="LABEL" DELEGATE="javascript::MAIN">
+			<BEGIN>&lt;SCRIPT&gt;</BEGIN>
+			<END>&lt;/SCRIPT&gt;</END>
+		</SPAN>
+
+		<!-- stylesheet -->
+		<SPAN TYPE="LABEL" DELEGATE="css::MAIN">
+			<BEGIN>&lt;STYLE&gt;</BEGIN>
+			<END>&lt;/STYLE&gt;</END>
 		</SPAN>
 
 		<SPAN TYPE="KEYWORD1" DELEGATE="TAGS">
@@ -53,311 +64,17 @@
 		<!-- whitespace: (space and tab) -->
 		<WHITESPACE> </WHITESPACE>
 		<WHITESPACE>	</WHITESPACE>
-		
+
 		<SPAN TYPE="LITERAL1">
 			<BEGIN>"</BEGIN>
 			<END>"</END>
 		</SPAN>
-		
-		<KEYWORDS IGNORE_CASE="TRUE">
-			<KEYWORD1>html</KEYWORD1>
-			<KEYWORD1>head</KEYWORD1>
-			<KEYWORD1>title</KEYWORD1>
-			<KEYWORD1>body</KEYWORD1>
-			<KEYWORD1>A</KEYWORD1>
-			<KEYWORD1>ADDRESS</KEYWORD1>
-			<KEYWORD1>APPLET</KEYWORD1>
-			<KEYWORD1>AREA</KEYWORD1>
-			<KEYWORD1>B</KEYWORD1>
-			<KEYWORD1>BIG</KEYWORD1>
-			<KEYWORD1>BLINK</KEYWORD1>
-			<KEYWORD1>BLOCKQUOTE</KEYWORD1>
-			<KEYWORD1>BR</KEYWORD1>
-			<KEYWORD1>BUTTON</KEYWORD1>
-			<KEYWORD1>CAPTION</KEYWORD1>
-			<KEYWORD1>CENTER</KEYWORD1>
-			<KEYWORD1>CODE</KEYWORD1>
-			<KEYWORD1>COL</KEYWORD1>
-			<KEYWORD1>COLGROUP</KEYWORD1>
-			<KEYWORD1>COMMENT</KEYWORD1>
-			<KEYWORD1>DIV</KEYWORD1>
-			<KEYWORD1>EMBED</KEYWORD1>
-			<KEYWORD1>FONT</KEYWORD1>
-			<KEYWORD1>FORM</KEYWORD1>
-			<KEYWORD1>FRAME</KEYWORD1>
-			<KEYWORD1>FRAMESET</KEYWORD1>
-			<KEYWORD1>H1</KEYWORD1>
-			<KEYWORD1>H2</KEYWORD1>
-			<KEYWORD1>H3</KEYWORD1>
-			<KEYWORD1>H4</KEYWORD1>
-			<KEYWORD1>H5</KEYWORD1>
-			<KEYWORD1>H6</KEYWORD1>
-			<KEYWORD1>HR</KEYWORD1>
-			<KEYWORD1>I</KEYWORD1>
-			<KEYWORD1>HEAD</KEYWORD1>
-			<KEYWORD1>IFRAME</KEYWORD1>
-			<KEYWORD1>ILAYER</KEYWORD1>
-			<KEYWORD1>IMG</KEYWORD1>
-			<KEYWORD1>INPUT</KEYWORD1>
-			<KEYWORD1>LABEL</KEYWORD1>
-			<KEYWORD1>LAYER</KEYWORD1>
-			<KEYWORD1>LINK</KEYWORD1>
-			<KEYWORD1>LI</KEYWORD1>
-			<KEYWORD1>MAP</KEYWORD1>
-			<KEYWORD1>MARQUEE</KEYWORD1>
-			<KEYWORD1>MENU</KEYWORD1>
-			<KEYWORD1>META</KEYWORD1>
-			<KEYWORD1>MULTICOL</KEYWORD1>
-			<KEYWORD1>NOBR</KEYWORD1>
-			<KEYWORD1>NOFRAMES</KEYWORD1>
-			<KEYWORD1>NOLAYER</KEYWORD1>
-			<KEYWORD1>NOTE</KEYWORD1>
-			<KEYWORD1>NOSCRIPT</KEYWORD1>
-			<KEYWORD1>OBJECT</KEYWORD1>
-			<KEYWORD1>OL</KEYWORD1>
-			<KEYWORD1>OPTION</KEYWORD1>
-			<KEYWORD1>OPTGROUP</KEYWORD1>
-			<KEYWORD1>P</KEYWORD1>
-			<KEYWORD1>PARAM</KEYWORD1>
-			<KEYWORD1>PRE</KEYWORD1>
-			<KEYWORD1>QUOTE</KEYWORD1>
-			<KEYWORD1>Q</KEYWORD1>
-			<KEYWORD1>SCRIPT</KEYWORD1>
-			<KEYWORD1>SELECT</KEYWORD1>
-			<KEYWORD1>SMALL</KEYWORD1>
-			<KEYWORD1>SPAN</KEYWORD1>
-			<KEYWORD1>SELECT</KEYWORD1>
-			<KEYWORD1>STRONG</KEYWORD1>
-			<KEYWORD1>STYLE</KEYWORD1>
-			<KEYWORD1>TABLE</KEYWORD1>
-			<KEYWORD1>TBODY</KEYWORD1>
-			<KEYWORD1>TD</KEYWORD1>
-			<KEYWORD1>TEXTAREA</KEYWORD1>
-			<KEYWORD1>TH</KEYWORD1>
-			<KEYWORD1>THEAD</KEYWORD1>
-			<KEYWORD1>TR</KEYWORD1>
-			<KEYWORD1>U</KEYWORD1>
-			<KEYWORD1>UL</KEYWORD1>			
-			
-			<KEYWORD3>ABBR</KEYWORD3>
-			<KEYWORD3>ACCESSKEY</KEYWORD3>
-			<KEYWORD3>ACTION</KEYWORD3>
-			<KEYWORD3>ALIGN</KEYWORD3>
-			<KEYWORD3>ALINK</KEYWORD3>
-			<KEYWORD3>ALT</KEYWORD3>
-			<KEYWORD3>BACKGROUND</KEYWORD3>
-			<KEYWORD3>BGCOLOR</KEYWORD3>
-			<KEYWORD3>BORDER</KEYWORD3>
-			<KEYWORD3>BEHAVIOR</KEYWORD3>
-			<KEYWORD3>CELLPADDING</KEYWORD3>
-			<KEYWORD3>CELLSPACING</KEYWORD3>
-			<KEYWORD3>CHAR</KEYWORD3>
-			<KEYWORD3>CHARSET</KEYWORD3>
-			<KEYWORD3>CHECKED</KEYWORD3>
-			<KEYWORD3>CLASS</KEYWORD3>
-			<KEYWORD3>CLASSID</KEYWORD3>
-			<KEYWORD3>CODE</KEYWORD3>
-			<KEYWORD3>CODEBASE</KEYWORD3>
-			<KEYWORD3>COLOR</KEYWORD3>
-			<KEYWORD3>COLS</KEYWORD3>
-			<KEYWORD3>COLSPAN</KEYWORD3>
-			<KEYWORD3>COORDS</KEYWORD3>
-			<KEYWORD3>CONTENT</KEYWORD3>
-			<KEYWORD3>DATA</KEYWORD3>
-			<KEYWORD3>DATETIME</KEYWORD3>
-			<KEYWORD3>DIR</KEYWORD3>
-			<KEYWORD3>DISABLED</KEYWORD3>
-			<KEYWORD3>ENCTYPE</KEYWORD3>
-			<KEYWORD3>FACE</KEYWORD3>
-			<KEYWORD3>FRAME</KEYWORD3>
-			<KEYWORD3>FRAMEBORDER</KEYWORD3>
-			<KEYWORD3>FRAMESPACING</KEYWORD3>
-			<KEYWORD3>HEADERS</KEYWORD3>
-			<KEYWORD3>HEIGHT</KEYWORD3>
-			<KEYWORD3>HIDDEN</KEYWORD3>
-			<KEYWORD3>HREF</KEYWORD3>
-			<KEYWORD3>HREFLANG</KEYWORD3>
-			<KEYWORD3>HSPACE</KEYWORD3>
-			<KEYWORD3>HTTP-EQUIV</KEYWORD3>
-			<KEYWORD3>ID</KEYWORD3>
-			<KEYWORD3>ISMAP</KEYWORD3>
-			<KEYWORD3>LABEL</KEYWORD3>
-			<KEYWORD3>LANG</KEYWORD3>
-			<KEYWORD3>LANGUAGE</KEYWORD3>
-			<KEYWORD3>LINK</KEYWORD3>
-			<KEYWORD3>LONGDESC</KEYWORD3>
-			<KEYWORD3>MAILTO</KEYWORD3>
-			<KEYWORD3>MARGINHEIGHT</KEYWORD3>
-			<KEYWORD3>MARGINWIDTH</KEYWORD3>
-			<KEYWORD3>MAXLENGTH</KEYWORD3>
-			<KEYWORD3>MEDIA</KEYWORD3>
-			<KEYWORD3>METHOD</KEYWORD3>
-			<KEYWORD3>MULTIPLE</KEYWORD3>
-			<KEYWORD3>METHOD</KEYWORD3>
-			<KEYWORD3>NAME</KEYWORD3>
-			<KEYWORD3>NOHREF</KEYWORD3>
-			<KEYWORD3>NORESIZE</KEYWORD3>
-			<KEYWORD3>NOSHADE</KEYWORD3>
-			<KEYWORD3>OBJECT</KEYWORD3>
-			<KEYWORD3>PROFILE</KEYWORD3>
-			<KEYWORD3>PROMPT</KEYWORD3>
-			<KEYWORD3>REL</KEYWORD3>
-			<KEYWORD3>REV</KEYWORD3>
-			<KEYWORD3>ROWS</KEYWORD3>
-			<KEYWORD3>ROWSPAN</KEYWORD3>
-			<KEYWORD3>RULES</KEYWORD3>
-			<KEYWORD3>SCROLLING</KEYWORD3>
-			<KEYWORD3>SELECTED</KEYWORD3>
-			<KEYWORD3>SHAPE</KEYWORD3>
-			<KEYWORD3>SIZE</KEYWORD3>
-			<KEYWORD3>SPAN</KEYWORD3>
-			<KEYWORD3>SRC</KEYWORD3>
-			<KEYWORD3>STYLE</KEYWORD3>
-			<KEYWORD3>TABINDEX</KEYWORD3>
-			<KEYWORD3>TARGET</KEYWORD3>
-			<KEYWORD3>TEXT</KEYWORD3>
-			<KEYWORD3>TOPMARGIN</KEYWORD3>
-			<KEYWORD3>TYPE</KEYWORD3>
-			<KEYWORD3>URL</KEYWORD3>
-			<KEYWORD3>VALIGN</KEYWORD3>
-			<KEYWORD3>VALUE</KEYWORD3>
-			<KEYWORD3>VLINK</KEYWORD3>
-			<KEYWORD3>VSPACE</KEYWORD3>
-			<KEYWORD3>WIDTH</KEYWORD3>
 
-            <LITERAL2>ONBLUR</LITERAL2>
-            <LITERAL2>ONCHANGE</LITERAL2>
-            <LITERAL2>ONFOCUS</LITERAL2>
-            <LITERAL2>ONKEYDOWN</LITERAL2>
-            <LITERAL2>ONKEYPRESS</LITERAL2>
-            <LITERAL2>ONKEYUP</LITERAL2>
-            <LITERAL2>ONLOAD</LITERAL2>
-            <LITERAL2>ONRESET</LITERAL2>
-            <LITERAL2>ONSELECT</LITERAL2>
-            <LITERAL2>ONSUBMIT</LITERAL2>
-            <LITERAL2>ONUNLOAD</LITERAL2>
-            <LITERAL2>ONCLICK</LITERAL2>
-            <LITERAL2>ONDBLCLICK</LITERAL2>
-            <LITERAL2>ONMOUSEDOWN</LITERAL2>
-            <LITERAL2>ONMOUSEMOVE</LITERAL2>
-            <LITERAL2>ONMOUSEOUT</LITERAL2>
-            <LITERAL2>ONMOUSEOVER</LITERAL2>
-            <LITERAL2>ONMOUSEUP</LITERAL2>
-
-		</KEYWORDS>
-
-		<SEQ TYPE="OPERATOR">=</SEQ>
-	</RULES>
-	
-	<RULES SET="JSP" ESCAPE="\">
-		<!-- whitespace: (space and tab) -->
-		<WHITESPACE> </WHITESPACE>
-		<WHITESPACE>	</WHITESPACE>
-
-		<SPAN TYPE="COMMENT1">
-			<BEGIN>/*</BEGIN>
-			<END>*/</END>
-		</SPAN>
-
-		<SPAN TYPE="LITERAL1" NO_LINE_BREAK="TRUE">
-			<BEGIN>"</BEGIN>
-			<END>"</END>
-		</SPAN>
-		<SPAN TYPE="LITERAL1" NO_LINE_BREAK="TRUE">
+		<SPAN TYPE="LITERAL1">
 			<BEGIN>'</BEGIN>
 			<END>'</END>
 		</SPAN>
 
-		<EOL_SPAN TYPE="COMMENT1">//</EOL_SPAN>
-		<SEQ TYPE="NULL">)</SEQ>
-		<SEQ TYPE="NULL">(</SEQ>
-		
 		<SEQ TYPE="OPERATOR">=</SEQ>
-		<SEQ TYPE="OPERATOR">!</SEQ>
-		<SEQ TYPE="OPERATOR">&gt;=</SEQ>
-		<SEQ TYPE="OPERATOR">&lt;=</SEQ>
-		<SEQ TYPE="OPERATOR">+</SEQ>
-		<SEQ TYPE="OPERATOR">-</SEQ>
-		<SEQ TYPE="OPERATOR">/</SEQ>
-		<SEQ TYPE="OPERATOR">*</SEQ>
-		<SEQ TYPE="OPERATOR">&gt;</SEQ>
-		<SEQ TYPE="OPERATOR">&lt;</SEQ>
-		<SEQ TYPE="OPERATOR">%</SEQ>
-		<SEQ TYPE="OPERATOR">&amp;</SEQ>
-		<SEQ TYPE="OPERATOR">|</SEQ>
-		<SEQ TYPE="OPERATOR">^</SEQ>
-		<SEQ TYPE="OPERATOR">~</SEQ>
-		<SEQ TYPE="NULL">.</SEQ>
-		<SEQ TYPE="OPERATOR">}</SEQ>
-		<SEQ TYPE="OPERATOR">{</SEQ>
-		<SEQ TYPE="NULL">,</SEQ>
-		<SEQ TYPE="NULL">;</SEQ>
-		<SEQ TYPE="NULL">]</SEQ>
-		<SEQ TYPE="NULL">[</SEQ>
-		<SEQ TYPE="NULL">?</SEQ>
-		
-		<KEYWORDS IGNORE_CASE="TRUE">
-			<KEYWORD1>abstract</KEYWORD1>
-			<KEYWORD1>break</KEYWORD1>
-			<KEYWORD1>case</KEYWORD1>
-			<KEYWORD1>catch</KEYWORD1>
-			<KEYWORD1>continue</KEYWORD1>
-			<KEYWORD1>default</KEYWORD1>
-			<KEYWORD1>do</KEYWORD1>
-			<KEYWORD1>else</KEYWORD1>
-			<KEYWORD1>extends</KEYWORD1>
-			<KEYWORD1>final</KEYWORD1>
-			<KEYWORD1>finally</KEYWORD1>
-			<KEYWORD1>for</KEYWORD1>
-			<KEYWORD1>if</KEYWORD1>
-			<KEYWORD1>implements</KEYWORD1>
-			<KEYWORD1>instanceof</KEYWORD1>
-			<KEYWORD1>native</KEYWORD1>
-			<KEYWORD1>new</KEYWORD1>
-			<KEYWORD1>private</KEYWORD1>
-			<KEYWORD1>protected</KEYWORD1>
-			<KEYWORD1>public</KEYWORD1>
-			<KEYWORD1>return</KEYWORD1>
-			<KEYWORD1>static</KEYWORD1>
-			<KEYWORD1>super</KEYWORD1>
-			<KEYWORD1>switch</KEYWORD1>
-			<KEYWORD1>synchronized</KEYWORD1>
-			<KEYWORD1>this</KEYWORD1>
-			<KEYWORD1>throw</KEYWORD1>
-			<KEYWORD1>throws</KEYWORD1>
-			<KEYWORD1>transient</KEYWORD1>
-			<KEYWORD1>try</KEYWORD1>
-			<KEYWORD1>volatile</KEYWORD1>
-			<KEYWORD1>while</KEYWORD1>
-
-			<KEYWORD2>package</KEYWORD2>
-			<KEYWORD2>import</KEYWORD2>
-
-			<KEYWORD3>boolean</KEYWORD3>
-			<KEYWORD3>byte</KEYWORD3>
-			<KEYWORD3>char</KEYWORD3>
-			<KEYWORD3>class</KEYWORD3>
-			<KEYWORD3>double</KEYWORD3>
-			<KEYWORD3>float</KEYWORD3>
-			<KEYWORD3>int</KEYWORD3>
-			<KEYWORD3>interface</KEYWORD3>
-			<KEYWORD3>long</KEYWORD3>
-			<KEYWORD3>short</KEYWORD3>
-			<KEYWORD3>void</KEYWORD3>
-			<KEYWORD3>String</KEYWORD3>
-			<KEYWORD3>Integer</KEYWORD3>
-			<KEYWORD3>Long</KEYWORD3>
-			<KEYWORD3>Double</KEYWORD3>
-			<KEYWORD3>File</KEYWORD3>
-			<KEYWORD3>Vector</KEYWORD3>
-			<KEYWORD3>Hashtable</KEYWORD3>
-
-			<LITERAL2>false</LITERAL2>
-			<LITERAL2>null</LITERAL2>
-			<LITERAL2>super</LITERAL2>
-			<LITERAL2>this</LITERAL2>
-			<LITERAL2>true</LITERAL2>
-		</KEYWORDS>
 	</RULES>
-	
 </MODE>
